--- a/package.json
+++ b/package.json
@@ -21,5 +21,8 @@
   "bugs": {
     "url": "https://github.com/Gdavidu/API-project/issues"
   },
-  "homepage": "https://github.com/Gdavidu/API-project#readme"
+  "homepage": "https://github.com/Gdavidu/API-project#readme",
+  "dependencies": {
+    "bcryptjs": "^2.4.3"
+  }
 }
